Fix initial flash of unstyled tab headers / tab containers if printclient with queue mode is visible on page load

--- a/src/Mapbender/PrintBundle/Resources/public/element/printclient.scss
+++ b/src/Mapbender/PrintBundle/Resources/public/element/printclient.scss
@@ -6,6 +6,7 @@
   }
   .job-list {
     @extend .mapbender-element-result-table;
+    display: none;  // Will be overruled by inline style once jQueryUI tab widget takes over
     max-height: 400px;
     overflow-y: auto;
     table {
